Add orchestration query
