# common/model/model.go
@@ -90,3 +90,8 @@ func initValidator() *validator.Validate {
 	return v
 }
 
+type Query struct {
+	Predicate string `json:"predicate" required:"true"`
+	Offset    int    `json:"offset"`
+	Limit     int    `json:"limit"`
+}
